[roles][user] add `no_log`
Added no_log to user tasks to prevent leaking the username

--- a/roles/user/tasks/main.yml
+++ b/roles/user/tasks/main.yml
@@ -19,9 +19,11 @@
     state: present
     groups: wheel
     append: yes
+  no_log: true
 
 - name: Add public key
   ansible.posix.authorized_key:
     user: "{{ username }}"
     state: present
     key: "{{ public_key }}"
+  no_log: true
